[gd_scene load_steps=4 format=3 uid="uid://b1jlm1yrlnyys"]

[ext_resource type="Script" uid="uid://bo1t2atdc165k" path="res://Main/music.gd" id="1_sis0o"]
[ext_resource type="AudioStream" uid="uid://bhghykmsn6ja4" path="res://Resources/audio/music/game_music.mp3" id="2_uvlmn"]
[ext_resource type="AudioStream" uid="uid://mo7htj38tq1b" path="res://Resources/audio/music/sad_end.mp3" id="3_tykgs"]

[node name="Music" type="Node"]
script = ExtResource("1_sis0o")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_uvlmn")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tykgs")

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_finished"]
